contracts/protocol/stellar/contracts/macro-integration-tests/tests/ui/lz_contract/fail/upgradeable_invalid_inner_option.rs
// UI (trybuild) negative test: `#[lz_contract(upgradeable(...))]` only accepts `no_migration`.
//
// Purpose:
// - Ensures nested option parsing rejects unknown inner identifiers.
// - Boundary coverage for the wrapper's config parser.

#[common_macros::lz_contract(upgradeable(bad_inner))]
pub struct MyContract;

fn main() {}
